force-app/main/default/objects/Account/fields/child_field__c.field-meta.xml
<CustomField>
    <fullName>child_field__c</fullName>
    <label>child field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>controlling_pick_list__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>one</fullName>
            </value>
            <value>
                <fullName>two</fullName>
            </value>
            <value>
                <fullName>three</fullName>
            </value>
            <value>
                <fullName>four</fullName>
            </value>
            <value>
                <fullName>five</fullName>
            </value>
            <value>
                <fullName>six</fullName>
            </value>
            <value>
                <fullName>seven</fullName>
            </value>
            <value>
                <fullName>eight</fullName>
            </value>
            <value>
                <fullName>nine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>