force-app/main/default/objects/Account/fields/controlling_pick_list__c.field-meta.xml
<CustomField>
    <fullName>controlling_pick_list__c</fullName>
    <label>controlling pick list</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>