force-app/main/default/objects/Account/fields/Is_Gold_Partner__c.field-meta.xml
<CustomField>
    <fullName>Is_Gold_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Gold Partner?</label>
    <type>Checkbox</type>
</CustomField>