force-app/main/default/objects/Account/fields/test_3__c.field-meta.xml
<CustomField>
    <fullName>test_3__c</fullName>
    <description>Dummy description version 101</description>
    <inlineHelpText>Testing - updated version</inlineHelpText>
    <label>test 3 upd</label>
    <length>10</length>
    <type>Text</type>
</CustomField>