force-app/main/default/objects/Account/fields/test_4__c.field-meta.xml
<CustomField>
    <fullName>test_4__c</fullName>
    <label>test 4</label>
    <length>10</length>
    <type>Text</type>
</CustomField>