force-app/main/default/objects/Account/fields/test_acc_picklist__c.field-meta.xml
<CustomField>
    <fullName>test_acc_picklist__c</fullName>
    <label>test acc picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>apple</fullName>
            </value>
            <value>
                <fullName>ball</fullName>
            </value>
            <value>
                <fullName>cat</fullName>
            </value>
            <value>
                <fullName>dog</fullName>
            </value>
            <value>
                <fullName>elephant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>