force-app/main/default/objects/Account/fields/test_picklist__c.field-meta.xml
<CustomField>
    <fullName>test_picklist__c</fullName>
    <label>test picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>orange</fullName>
            </value>
            <value>
                <fullName>jackfruit</fullName>
            </value>
            <value>
                <fullName>pineapple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>