force-app/main/default/objects/Account/fields/TR_BP_2__c.field-meta.xml
<CustomField>
    <fullName>TR_BP_2__c</fullName>
    <label>TR BP 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>