force-app/main/default/objects/Account/validationRules/test_acc.validationRule-meta.xml
<ValidationRule>
    <fullName>test_acc</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(BillingCountry)</errorConditionFormula>
    <errorDisplayField>BillingCountry</errorDisplayField>
    <errorMessage>Billing Country cannot be blank</errorMessage>
</ValidationRule>